# jsonb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
benches/: get_path.rs  parser.rs  strip_nulls.rs
data/: status_string_values.json
src/: builder.rs  constants.rs  de.rs  error.rs  extension.rs  from.rs  functions.rs  iterator.rs  jentry.rs  keypath.rs  lazy_value.rs  lib.rs  number.rs  owned.rs  parser.rs  raw.rs  ser.rs  util.rs  value.rs
src/core/: item.rs  mod.rs
src/core/databend/: builder.rs  constants.rs  de.rs  iterator.rs  jentry.rs  mod.rs  ser.rs  util.rs
src/functions/: array.rs  core.rs  mod.rs  object.rs  operator.rs  other.rs  path.rs  scalar.rs
src/jsonpath/: error.rs  input.rs  mod.rs  parser.rs  path.rs  selector.rs  util.rs
src/jsonpath/ast/: ast.rs  expr.rs  json_path.rs  mod.rs
src/jsonpath/exception/: exception.rs  exception_code.rs  mod.rs  span.rs
src/jsonpath/parser/: expr.rs  json_path.rs  mod.rs  parser.rs  token.rs  unescape.rs
tests/it/: decode.rs  encode.rs  functions.rs  jsonpath_parser.rs  keypath_parser.rs  main.rs  number.rs  parser.rs
tests/it/testdata/: json_path-error.txt  json_path.txt  key_path.txt
