# Copyright 2023 Datafuse Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["encoding"]
description = "JSONB implement in Rust."
edition = "2021"
homepage = "https://github.com/datafuselabs/jsonb"
keywords = ["json", "jsonb", "jsonpath"]
license = "Apache-2.0"
name = "jsonb"
repository = "https://github.com/datafuselabs/jsonb"
version = "0.3.0"
rust-version = "1.68"

[dependencies]
byteorder = "1.5.0"
fast-float = "0.2.0"
nom = "7.1.3"
ordered-float = { version = "4.1.1", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = { version = "1.0.107", default-features = false, features = [
  "preserve_order",
] }

[dev-dependencies]
goldenfile = "1.5.2"
serde_json = "1.0.107"
json-deserializer = "0.4.4"
simd-json = {version = "0.11.1", features = ["allow-non-simd"]}
mockalloc = "0.1.2"
criterion = "0.5.1"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "get_path"
harness = false

