# Copyright 2023 Datafuse Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["encoding"]
description = "JSONB implement in Rust."
edition = "2021"
homepage = "https://github.com/databendlabs/jsonb"
keywords = ["json", "jsonb", "jsonpath"]
license = "Apache-2.0"
name = "jsonb"
repository = "https://github.com/databendlabs/jsonb"
version = "0.5.1"
rust-version = "1.80"

[dependencies]
byteorder = "1.5.0"
fast-float2 = "0.2.3"
itoa = "1.0"
nom = "8.0.0"
num-traits = "0.2.19"
ordered-float = { version = "5.0", default-features = false }
rand = { version = "0.9.0", features = ["small_rng"] }
ryu = "1.0"
serde = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[dev-dependencies]
goldenfile = "1.8"
serde_json = "1.0"
json-deserializer = "0.4.4"
simd-json = "0.15.0"
mockalloc = "0.1.2"
criterion = "0.5.1"

[features]
default = ["databend", "serde_json/preserve_order"]
databend = []
sqlite = []

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "get_path"
harness = false

[[bench]]
name = "strip_nulls"
harness = false
